# mastermlx

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README-PYPI.md  README-TECHNICAL.md  README.md  RELEASE_NOTES_TEMPLATE.md  RELEASING.md  environment.yml  pyproject.toml  setup.py
.github/workflows/: ci.yml  publish.yml  release.yml
benchmarks/: README.md  bench_accel.py  bench_graphs.py  bench_models.py  bench_neural.py  bench_optimize.py  bench_signal.py  bench_tabular.py
docs/: architecture_plan.md  benchmark_plan.md  control.md  cython_roadmap.md  graphs.md  interview_story.md  neural_api.md
examples/bandits/: README.md
examples/classification/: README.md  compare_models.py
examples/clustering/: README.md  kmeans_demo.py
examples/neural_networks/: README.md  mlp_spirals.py
examples/nlp/: README.md  text_classify.py
examples/probabilistic/: README.md
examples/regression/: README.md
examples/rl/: README.md
examples/robotics/: README.md  experiment_demo.py
examples/signal/: README.md  experiment_demo.py  fourier_demo.py
examples/tools/: math_tools_demo.py
mastermlx/: __init__.py  config.py
mastermlx/accel/: __init__.py  _cnn_ops.pyx  _conv1d_ops.pyx  _distance.cpp  _distance_cpp.cpp  _distance_ops.pyx  _dtw.cpp  _kdtree.cpp  _kernels_cpp.cpp  (+12 more)
scripts/: benchmark.py  benchmark_classification.py
tests/: test_accel_backend.py  test_accel_recurrent_signal.py  test_adaboost_regressor.py  test_affinity_propagation.py  test_agglomerative.py  test_api_compat.py  test_bandits.py  test_bayesian_regression.py  test_boosting.py  test_control.py  test_data_quality_auto.py  test_datasets_metrics_cv_selection.py  test_dbscan.py  test_decision_tree.py  test_discriminant_analysis.py  test_distributions.py  test_elliptic_envelope.py  test_ensemble.py  test_estimation.py  test_evaluation.py  test_factor_analysis.py  test_gaussian_nb.py  test_gaussian_process.py  test_gmm.py  test_gradient_boosting_classifier.py  test_graph_cpp.py  test_graph_knowledge.py  test_graphs.py  test_grid_search.py  test_hbos.py  test_histgb_sfs_adamw.py  test_hmm.py  test_ica.py  test_information.py  test_infrastructure.py  test_isolation_forest.py  test_kernel_pca.py  test_kernel_svr.py  test_kernels_and_distance.py  test_kmeans.py  (+73 more)
(+285 files in other folders)
